--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -4,17 +4,24 @@
   background-color: $veryDarkBlue;
   padding: 50px 10%;
   .footer__search {
-    @include flex(row, space-around);
-    gap: 0 10px;
+    @include flex(row, space-between);
+    flex-wrap: wrap;
+    max-width: 300px;
+    gap: 10px;
+    margin: auto;
     input {
       border: none;
       background-color: $veryLightGray;
       padding: 10px 20px;
       border-radius: 50px;
+      width: 220px;
+    }
+    button {
+      box-shadow: none;
     }
   }
   .footer__links {
-    @include flex(row, space-between);
+    @include flex(row, space-around);
     align-items: flex-start;
     margin-top: 60px;
     ul {
@@ -22,6 +29,9 @@
         padding-bottom: 15px;
         a {
           color: $veryLightGray;
+          &:hover {
+            color: $brightRed;
+          }
         }
       }
     }
@@ -32,11 +42,17 @@
       margin: 40px 0;
       ul {
         @include flex(row, space-between);
+        max-width: 400px;
+        margin: auto;
+        gap: 0 20px;
         li {
           a {
             img {
               width: 28px;
               height: 28px;
+              &:hover {
+                transform: scale(1.1);
+              }
             }
           }
         }
@@ -50,26 +66,39 @@
     margin-top: 40px;
     text-align: center;
   }
-  @media (min-width: 768px) {
+  @media (min-width: 900px) {
     @include flex(row, space-between);
     align-items: flex-start;
     padding: 30px 10%;
     .footer__search {
       @include flex(column, "");
+      gap: 60px 0;
+      div {
+        &:first-of-type {
+          @include flex(row, "");
+          gap: 0 10px;
+        }
+        &:last-of-type {
+          align-self: flex-start;
+        }
+      }
     }
     .footer__links {
-      @include flex(row, space-between);
+      @include flex(row, space-evenly);
+      width: 40vw;
       align-items: flex-start;
       margin-top: 0;
     }
     .footer__icons {
       @include flex(column-reverse, space-between);
+      gap: 60px 0;
+      align-items: flex-end;
       .footer__icons__social {
         margin: 0;
+        ul {
+          gap: 0 10px;
+        }
       }
-    }
-    .footer__copyright {
-      margin-top: 0;
     }
   }
 }
