--- a/src/components/outro/Outro.scss
+++ b/src/components/outro/Outro.scss
@@ -2,7 +2,8 @@
 
 .outro {
   @include flex(column, "");
-  background-color: $brightRed;
+  background: $brightRed url("src/assets/images/bg-simplify-section-mobile.svg")
+    no-repeat top 40px left;
   padding: 80px 10%;
   text-align: center;
   gap: 30px 0;
@@ -22,5 +23,8 @@
     @include flex(row, space-between);
     text-align: left;
     padding: 50px 10%;
+    background: $brightRed
+      url("src/assets/images/bg-simplify-section-desktop.svg") no-repeat top
+      left;
   }
 }
