fixed padding issues on the footer

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -19,7 +19,8 @@
         color: $veryLightGray;
         padding: 5px 15px;
         border-radius: 50px;
-        font-size: 18px;
+        font-size: 14px;
+        font-weight: bold;
       }
       h3 {
         color: $darkBlue;
